src/openid/snapshots/credibil_vc__openid__issuer__tests__authorization_configuration_id.snap
---
source: src/openid/issuer.rs
assertion_line: 2318
expression: request
---
credential_issuer: "https://example.com"
response_type: code
client_id: "1234"
redirect_uri: "http://localhost:3000/callback"
state: "1234"
code_challenge: "1234"
code_challenge_method: S256
authorization_details: "[authorization_details]"
subject_id: "1234"
wallet_issuer: "1234"
