src/openid/snapshots/credibil_vc__openid__issuer__tests__authorization_details.snap
---
source: src/openid/issuer.rs
assertion_line: 2325
expression: object.authorization_details
---
- type: openid_credential
  credential_configuration_id: EmployeeID_JWT
  credential_definition:
    credentialSubject:
      email: {}
      family_name: {}
      given_name: {}
