src/openid/snapshots/credibil_vc__openid__issuer__tests__claim_label_display_default.snap
---
source: src/openid/issuer.rs
assertion_line: 2609
expression: "&default"
---
- Address.Country
- Address.Locality
- Address.Region
- Address.Street Address
- Email
- Family name
- Given name
