src/openid/snapshots/credibil_vc__openid__issuer__tests__claim_label_display_en-NZ.snap
---
source: src/openid/issuer.rs
assertion_line: 2605
expression: "&claims"
---
- Address.Country
- Address.Locality
- Address.Region
- Address.Street Address
- Email
- Family name
- Given name
