src/openid/snapshots/credibil_vc__openid__issuer__tests__credential_identifier.snap
---
source: src/openid/issuer.rs
assertion_line: 2388
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
credential_identifier: EngineeringDegree2023
proof:
  proof_type: jwt
  jwt: SomeJWT
