src/openid/snapshots/credibil_vc__openid__issuer__tests__multiple_proofs.snap
---
source: src/openid/issuer.rs
assertion_line: 2467
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
credential_identifier: EngineeringDegree2023
proofs:
  jwt:
    - SomeJWT1
    - SomeJWT2
